testsuite/poke.pkl/break-diag-4.pk
/* { dg-do compile } */

while (1)
  {
    lambda void:
      {
        break; /* { dg-error "" } */
      }();
  }
